--- a/_includes/scripts/mathjax.liquid
+++ b/_includes/scripts/mathjax.liquid
@@ -4,6 +4,7 @@
     window.MathJax = {
       tex: {
         tags: 'ams',
+        inlineMath: [['$', '$'], ['\\(', '\\)']]
       },
     };
   </script>
